# Kommit

./: .gitignore  AI_DECLARATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  git_commit_ai.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
core/: ai_service.py  config_manager.py  git_service.py  models.py
ui/: changes_dialog.py  config_dialog.py  main_window.py  repo_manager.py
ui/widgets/: context_dialog.py  diff_viewer.py  text_dialog.py  worker.py
