[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitcommitai"
version = "1.0.0"
description = "AI-powered Git Commit Message Generator"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "TonyCollett"},
]
maintainers = [
    {name = "TonyCollett"},
]
keywords = ["git", "commit", "ai", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=2.14.0",
    "anthropic>=0.75.0",
    "google-genai>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
gitcommitai = "git_commit_ai:main"

[tool.setuptools]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"