[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kommit"
version = "2.0.2"
description = "AI-powered Git assistant for commit messages, code review, and root cause analysis"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "TonyCollett"},
]
maintainers = [
    {name = "TonyCollett"},
]
keywords = ["git", "commit", "ai", "openai", "anthropic", "gemini", "ollama", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "PySide6>=6.6.0",
    "openai>=2.14.0",
    "anthropic>=0.75.0",
    "google-genai>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
kommit = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "ui*"]

[tool.ruff]
line-length = 88
target-version = "2.0.2"
